--- a/fe/package.json
+++ b/fe/package.json
@@ -15,8 +15,12 @@
     "art-template": "^4.13.2",
     "art-template-loader": "^1.4.3",
     "copy-webpack-plugin": "^10.0.0",
+    "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.3.0",
     "sme-router": "^0.12.8",
+    "style-loader": "^3.3.1",
     "webpack": "^5.64.2",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
