--- a/be/package.json
+++ b/be/package.json
@@ -13,6 +13,8 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "loadsh": "^0.0.4",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.14",
     "morgan": "~1.9.1"
   }
