--- a/fe/package.json
+++ b/fe/package.json
@@ -17,6 +17,7 @@
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "loadsh": "^0.0.4",
     "node-sass": "^6.0.1",
     "sass-loader": "^12.3.0",
     "sme-router": "^0.12.8",
